--- a/package.json
+++ b/package.json
@@ -12,6 +12,14 @@
     "express-handlebars": "^6.0.3",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "mongoose": "~5.9.2",
+    "morgan": "~1.9.1",
+    "nodemon": "^2.0.15"
+  },
+  "devDependencies": {
+
+    "hbs": "^4.2.0",
+
+    "seedgoose": "^2.0.2"
   }
 }
