--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "force",
+  "name": "travlr",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -9,17 +9,15 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "express-handlebars": "^6.0.3",
-    "hbs": "~4.0.4",
+    "hbs": "^4.2.0",
     "http-errors": "~1.6.3",
     "mongoose": "~5.9.2",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "request": "^2.88.2"
   },
   "devDependencies": {
-
     "hbs": "^4.2.0",
-
     "seedgoose": "^2.0.2"
   }
 }
